Bug 246043 - Bluedevil crash
Summary: Bluedevil crash
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth-wizard (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-28 16:30 UTC by Rohan Garg
Modified: 2010-10-03 16:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rohan Garg 2010-07-28 16:30:39 UTC
Application: bluedevil-wizard (0.1)
KDE Platform Version: 4.4.92 (KDE 4.4.92 (KDE 4.5 RC2))
Qt Version: 4.7.0
Operating System: Linux 2.6.35-11-generic x86_64
Distribution: Ubuntu maverick (development branch)

-- Information about the crash:
- What I was doing when the application crashed:
While Scanning for  bluetooth devices i switched off my bluetooth adapter to see if bluedevil would crash and it does

- Unusual behavior I noticed:
Bluedevil crashes on scanning for devices when the physical switch kills bluetooth

- Custom settings of the application:
None

The crash can be reproduced some of the time.

-- Backtrace:
Application: BlueDevil Wizard (bluedevil-wizard), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fd8493a0760 (LWP 12129))]

Thread 2 (Thread 0x7fd8368db710 (LWP 12131)):
#0  0xffffffffff60017b in ?? ()
#1  0x00007fd8368daa90 in ?? ()
#2  0x00007fff4f341852 in ?? ()
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 1 (Thread 0x7fd8493a0760 (LWP 12129)):
[KCrash Handler]
#6  0x00007fd847ff076e in BlueDevil::Adapter::stopDiscovery() const () from /usr/lib/libbluedevil.so.1
#7  0x0000000000408c7c in DiscoverPage::qt_metacall (this=0xbfebb0, _c=QMetaObject::InvokeMetaMethod, _id=6389152, _a=0x7fff4f2b17a0) at /media/disk/bluedevil/build/src/wizard/moc_discoverpage.cpp:83
#8  0x00007fd8460a1527 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#9  0x00007fd84609b2f9 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#10 0x00007fd846cb668c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#11 0x00007fd846cbc19d in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#12 0x00007fd8486e5636 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#13 0x00007fd8460896dc in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#14 0x00007fd8460b90c2 in ?? () from /usr/lib/libQtCore.so.4
#15 0x00007fd8460b5ec8 in ?? () from /usr/lib/libQtCore.so.4
#16 0x00007fd8422cc522 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#17 0x00007fd8422d0488 in ?? () from /lib/libglib-2.0.so.0
#18 0x00007fd8422d063c in g_main_context_iteration () from /lib/libglib-2.0.so.0
#19 0x00007fd8460b5b93 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#20 0x00007fd846d6896e in ?? () from /usr/lib/libQtGui.so.4
#21 0x00007fd846088402 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#22 0x00007fd8460887ec in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#23 0x00007fd84608c8bb in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#24 0x000000000040938f in main (argc=<value optimized out>, argv=<value optimized out>) at /media/disk/bluedevil/src/wizard/main.cpp:50

Reported using DrKonqi
Comment 1 Alex Fiestas 2010-08-13 14:23:53 UTC
Fixed, will be released with 1.0RC3

Thanks for reporting!