Fix crash when the device is switched off while scanning. For 1.1 we have to handle it in a better (more beatiful) way

BUG: 246043