src/wizard/pages/discoverpage.cpp
@@ -102,7 +102,9 @@ void DiscoverPage::stopScan()
 {
     m_counter = 0;
     m_timer->stop();
-    Manager::self()->defaultAdapter()->stopDiscovery();
+    if (Manager::self()->defaultAdapter()) {
+        Manager::self()->defaultAdapter()->stopDiscovery();
+    }
 }
 
 void DiscoverPage::deviceFound(Device* device)
